classDiagram
    %% Clase Game - Controlador principal del juego
    class Game {
        -Board __board__
        -List~Player~ __players__
        -Dice __dice__
        -int __current_turn__
        -List~int~ __dice_values__
        -Player __winner__
        -List __history__
        +__init__(player1: Player, player2: Player, board: Board, dice: Dice)
        +start() void
        +roll_dice() void
        +make_move(from_pos: int, to_pos: int) bool
        +switch_turn() void
        +get_current_player() Player
        +get_dice_values() List~int~
        +get_possible_moves() List~str~
        +is_over() bool
        +get_winner() Player
        +display_board() void
        +reset() void
        +current_player_has_captured() bool
        +can_current_player_bear_off() bool
        -_get_reentry_moves() List~str~
        -_get_bear_off_moves() List~str~
        -_get_normal_moves() List~str~
        -_validate_move(player: Player, from_pos: int, to_pos: int, die: int) bool
        -_validate_reentry(player: Player, to_pos: int, die: int) bool
        -_validate_bear_off(player: Player, from_pos: int, die: int) bool
        -_validate_bear_off_white(start: int, die_value: int) bool
        -_validate_bear_off_black(start: int, die_value: int) bool
        -_can_bear_off(player: Player) bool
        -_execute_move(player: Player, from_pos: int, to_pos: int) void
        -_execute_reentry(player: Player, to_pos: int) void
        -_execute_bear_off(player: Player, from_pos: int) void
        -_execute_board_move(player: Player, from_pos: int, to_pos: int) void
    }

    %% Clase Board - Representa el tablero
    class Board {
        -List~Dict~ __points_status__
        -Dict~str, List~ __bar__
        -Dict~str, int~ __off__
        +__init__()
        +get_point(point: int) Dict
        +move_checker(color: str, from_point: int, to_point: int) bool
        +bear_off_checker(color: str, from_point: int) bool
        +enter_from_captured(color: str, to_point: int) bool
        +get_bar() Dict~str, List~
        +get_off() Dict~str, int~
        +get_home(color: str) List~int~
        +get_2d_representation() str
        +display() void
    }

    %% Clase Player - Representa un jugador
    class Player {
        -str __name__
        -str __color__
        -int __checkers_off__
        +__init__(player_name: str, color: str)
        +get_name() str
        +get_color() str
        +get_checkers_off() int
        +increment_checkers_off() void
        +reset_checkers_off() void
    }

    %% Clase Dice - Representa los dados
    class Dice {
        -int __value1__
        -int __value2__
        +__init__()
        +roll() void
        +get_values() Tuple~int, int~
        +is_double() bool
    }

    %% Clase Checker - Representa una ficha
    class Checker {
        -str __color__
        +__init__(color: str)
        +get_color() str
        +__str__() str
    }

    %% Enumeraciones de excepciones personalizadas
    class InvalidMoveException {
        <<exception>>
    }

    class InvalidReentryException {
        <<exception>>
    }

    class InvalidBearOffException {
        <<exception>>
    }

    %% Relaciones de composición y agregación
    Game "1" *-- "1" Board : contiene
    Game "1" *-- "2" Player : contiene
    Game "1" *-- "1" Dice : contiene
    Board "1" o-- "*" Checker : gestiona
    Player "1" -- "1" Checker : tiene color

    %% Relaciones de uso (dependencias)
    Game ..> InvalidMoveException : lanza
    Game ..> InvalidReentryException : lanza
    Game ..> InvalidBearOffException : lanza

    %% Notas sobre responsabilidades
    note for Game "Controlador principal: gestiona turnos,\nmovimientos, validaciones y fin del juego"
    note for Board "Gestiona estado del tablero:\nposiciones, barra y bear-off"
    note for Player "Representa un jugador:\nnombre, color y progreso"
    note for Dice "Gestiona tiradas de dados\ny detección de dobles"
    note for Checker "Representa una ficha individual\ncon su color"
    note for Game "Algunos atributos aparecen en negrita, debido a que eso es lo que hace los __ de prefijo y sufijo"
